@@ -1,3 +1,12 @@
+2000-01-09  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmTheme/FvwmTheme.c:
+	new option 'Transparent'
+
+	* FvwmButtons/FvwmButtons.c (HandlePanelPress):
+	(GetPanelGeometry):
+	removed previous configure request patch
+
 2000-01-08  Dan Espen  <dane@mk.telcordia.com>
 
 	* FvwmScript/FvwmScript.1 (example): Clean up.
